--- a/design.css
+++ b/design.css
@@ -450,6 +450,23 @@ p.pre-manazerov{
 img.rule-model{
 	padding-top: 80px;
 }
+.background-all-stars{
+	display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
