--- a/design.css
+++ b/design.css
@@ -427,10 +427,9 @@ table.patka-tyzdna th{
 
 div.rules, p{
 	text-align: center;
-	color: black;
-	
+	color: white;
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 18px;
 }
 div.rules{
 	overflow-y: scroll; 
