--- a/design.css
+++ b/design.css
@@ -148,7 +148,7 @@ div.paragraph-all-stars{
 	width: 100%;
 	height: 850px;
 	background-color: rgb(9, 113, 186, 0.8);
-	text-align: center;
+	
 }
 
 #standings-p{
@@ -455,7 +455,12 @@ div.background-all-stars{
 }
 
 
-
+div.info-o-postupe{
+	margin: 0 auto;
+	width: 20%;
+	color: white; 
+	font-weight: bold;
+}
 
 
 
@@ -554,6 +559,13 @@ div.rules-article{
 
 .rule-model{
 	display: none;
+}
+div.info-o-postupe{
+	width: 100%;
+	float: left;
+	display: block;
+	padding-left: 100px;
+	padding-bottom: 20px;
 }
 
 }
