--- a/design.css
+++ b/design.css
@@ -399,7 +399,9 @@ table.manazer-uspechy td{
 .bardejov-manazer{
 	background-color: #c52431;
 }
-
+p.nazov-klubu{
+	text-align: center;
+}
 
 
 table.patka-tyzdna{
