--- a/playoff.css
+++ b/playoff.css
@@ -69,7 +69,7 @@ p{
    padding-top: 2px;
 }
 .tabulka-zlatakorcula td{
-  background-color: #D0D0D0;
+  background-color: #E3E3E3;
   text-align: left;
   border-bottom: 1px solid white;
 }
