--- a/design.css
+++ b/design.css
@@ -249,6 +249,11 @@ div.paragraph-all-stars{
 	 padding: 2px;
 }
 
+.season-standings  td:last-child {
+    background-color: #c7c6c6;
+    text-align: center;
+}
+
 th.header{
 	border-bottom: 2px solid #c7c6c6;
 	font-size: 17px;
@@ -637,10 +642,6 @@ div.halloffame p{
 		overflow-x: auto;
 		width: 200%;
 		margin: 0 auto;
-}
-
-.season-standings td{
-  	font-size: 8px;
 }
 
 
