--- a/design.css
+++ b/design.css
@@ -138,7 +138,7 @@ a.navbar-link{
 
 .clanok-uvod{
 	display: flex;
-	background: url(https://thehockeynews.com/wp-content/themes/thn-custom/assets/images/home-feature-text-bg.jpg); 
+	background: url(https://st2.depositphotos.com/2245963/9659/i/950/depositphotos_96591114-stock-photo-ice-texture-on-a-natural.jpg); 
 	justify-content: center; 
 	width: 720px;
 }
