--- a/playoff.css
+++ b/playoff.css
@@ -218,7 +218,7 @@ body {
     text-align: center;
     text-transform: uppercase;
     float: right;
-    color: black;
+    color: white;
     width: 15px;
     font-weight: bold;
     font-family: 'Roboto Condensed', sans-serif;
