--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ background-color: #f8f9fa;
 }
 
 .zoom-small:hover {
-  transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.4); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 .league-logo-zoom {
@@ -165,6 +165,20 @@ p.news{
 	margin-left: 40px;
   	float: left;
   	font-family: Veranda;
+}
+
+div.titul-majster-span{
+
+}
+
+span.titul-majster{
+  margin-top: 5px;	
+  height: 25px;
+  width: 100px;
+  background-color: #bbb;
+  border-radius: 10%;
+  display: inline-block;
+  display: block;
 }
 
 
